--- a/library-backEnd/requirements.txt
+++ b/library-backEnd/requirements.txt
@@ -1,16 +1,151 @@
 alembic==1.13.1
-blinker==1.8.2
-click==8.1.7
-Flask==3.0.3
-Flask-Cors==4.0.1
+annotated-types==0.6.0
+anyio==3.6.2
+apturl==0.5.2
+asgiref==3.5.0
+attrs==21.2.0
+bcrypt==4.0.1
+blinker==1.7.0
+Brlapi==0.8.3
+cachetools==5.0.0
+certifi==2024.2.2
+cffi==1.15.1
+chardet==4.0.0
+charset-normalizer==3.3.2
+chrome-gnome-shell==0.0.0
+cliapp==1.20180812.1
+click==8.1.3
+cmdtest==0.32+git
+colorama==0.4.6
+command-not-found==0.3
+cors==1.0.1
+cryptography==41.0.1
+cupshelpers==1.0
+dbus-python==1.2.18
+defer==1.0.6
+distlib==0.3.4
+distro==1.7.0
+distro-info==1.1+ubuntu0.2
+Django==3.2.12
+docker==5.0.3
+docker-compose==1.29.2
+dockerpty==0.4.1
+docopt==0.6.2
+duplicity==0.8.21
+ecdsa==0.18.0
+exceptiongroup==1.2.0
+fastapi==0.95.1
+fasteners==0.14.1
+filelock==3.13.3
+Flask==3.0.2
+Flask-Cors==4.0.0
+Flask-JWT-Extended==4.6.0
+Flask-Login==0.6.3
 Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
-greenlet==3.0.3
-itsdangerous==2.2.0
-Jinja2==3.1.4
-Mako==1.3.5
+future==1.0.0
+gevent==24.2.1
+google-api-python-client==1.7.11
+google-auth==1.5.1
+google-auth-httplib2==0.1.0
+greenlet==2.0.2
+gyp==0.1
+h11==0.14.0
+httplib2==0.20.2
+httptools==0.5.0
+idna==3.4
+importlib-metadata==4.6.4
+itsdangerous==2.1.2
+jeepney==0.7.1
+Jinja2==3.1.3
+jsonschema==3.2.0
+keyring==23.5.0
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lockfile==0.12.2
+louis==3.20.0
+macaroonbakery==1.3.1
+Mako==1.1.3
+Markdown==3.3.6
 MarkupSafe==2.1.5
+monotonic==1.6
+more-itertools==8.10.0
 mysqlclient==2.2.4
-SQLAlchemy==2.0.30
-typing_extensions==4.12.2
-Werkzeug==3.0.3
+netifaces==0.11.0
+oauth2client==4.1.3
+oauthlib==3.2.0
+olefile==0.46
+paramiko==2.9.3
+passlib==1.7.4
+pexpect==4.8.0
+Pillow==9.0.1
+platformdirs==2.5.1
+protobuf==3.12.4
+ptyprocess==0.7.0
+pyasn1==0.5.0
+pyasn1-modules==0.2.1
+pycairo==1.20.1
+pycparser==2.21
+pycups==2.0.1
+pydantic==1.10.7
+pydantic_core==2.14.6
+PyDrive==1.3.1
+Pygments==2.11.2
+PyGObject==3.42.1
+PyJWT==2.3.0
+pymacaroons==0.13.0
+PyMySQL==1.1.1
+PyNaCl==1.5.0
+pyOpenSSL==21.0.0
+pyparsing==2.4.7
+PyQt5==5.15.6
+PyQt5-sip==12.9.1
+pyRFC3339==1.1
+pyrsistent==0.18.1
+PySocks==1.7.1
+python-apt==2.4.0+ubuntu3
+python-dateutil==2.8.1
+python-debian==0.1.43+ubuntu1.1
+python-dotenv==1.0.0
+python-jose==3.3.0
+python-multipart==0.0.6
+pytz==2022.1
+pyxdg==0.27
+PyYAML==6.0
+pyzmq==25.1.2
+reportlab==3.6.8
+requests==2.31.0
+requests-file==2.0.0
+rsa==4.9
+SecretStorage==3.3.1
+six==1.16.0
+sniffio==1.3.0
+SQLAlchemy==2.0.17
+sqlparse==0.4.2
+starlette==0.26.1
+systemd-python==234
+texttable==1.6.4
+tldextract==5.1.2
+ttystatus==0.38
+typing_extensions==4.5.0
+ubuntu-drivers-common==0.0.0
+ubuntu-pro-client==8001
+ufw==0.36.1
+unattended-upgrades==0.1
+uritemplate==3.0.1
+urllib3==1.26.5
+usb-creator==0.3.7
+uvicorn==0.22.0
+virtualenv==20.13.0+ds
+wadllib==1.3.6
+watchfiles==0.19.0
+websocket-client==1.2.3
+websockets==11.0.2
+Werkzeug==3.0.1
+xdg==5
+xkit==0.0.0
+zipp==1.0.0
+zope.event==5.0
+zope.interface==6.2
